Change Notes
=============

2009-11-06 FLI
	- You can now disable triggers by setting 'trigger.enabled' to false in the server.properties
	- Added 'Sort Elements' action to dimension editor
	- Added notification service
	- Added validFrom and validTo date ranges to the mapping
	- Increased content width to 950 (expecting min. 1280px width)
	- Implemented Stop action in job list
	
2009-11-03 FLI
	- Added StopFlag into process context - needs to be implemented further thought
	- Added JDBCUtil.executeUpdate(..)
	- Improved Record.isChanged(..) detection by comparing the current value to the original value
	
2009-10-21 FLI
	- The XLSFileSource now supports the specification of a path instead of a specific file. The source will
	  search for the first file matching the endsWith string and process this.
	  
2009-10-20 FLI
	- Added "Test" of expressions into mapping editor.
	
2009-10-13 jbornema
	- JDBCLoader keeps in batch mode the records to be able to throw specific exception when
	  SQLException occurs
	- ETLgineServer.loadJob(String scriptName) added used by Launch class to dynamic load scripts
	- ETLgineServer sets system property "etlgine_rootPath" to the root path during initialization,
	  so this property can be used in jetty configuration xml
	- DbColumnDef.typeName added
	- JDBCLoader.autoAlterColumns property added that alters automatically increased column char field length
	  when required 

2009-10-07 jbornema
	- DataPoolInitializerUtil.ensureCube(...) converts CubeFlexCalc to CubePreCache if requested.

2009-10-06 jbornema
	- JdbcLoader SEVERE bug fixed in batch mode: each loop dropped the current record: very bad - this is fixed now.
	- IJobFinalizer added invoked when job is finished.
	- EmptyExtractor added useful when no data need to be processed.
	- SaveDataPoolFinalizer added that saves the data pool when job is finished.
	- URLFileSource added, useful in test cases to use classpath resource as FileSource.